# munera

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
ass/: shader.wgsl  sprite_batch.wgsl  upscale_shader.wgsl
crates/munera_assets/: Cargo.toml
crates/munera_assets/src/: lib.rs
crates/munera_core/: Cargo.toml  asdf.txt  build.rs
crates/munera_core/assets/: SC_RenderGym.ass  T_blass.ass  T_tuwuck.ass
crates/munera_core/content/: shader.wgsl
crates/munera_core/src/: assets.rs  engine.rs  image.rs  iso_renderer.rs  lib.rs  math.rs  misc_comps.rs  scene.rs
crates/munera_core/src/editor/: mod.rs
crates/munera_editor/: Cargo.toml
crates/munera_editor/src/: inspect.rs  main.rs
crates/munera_foundation/: Cargo.toml
crates/munera_foundation/src/: lib.rs
crates/munera_macros/: Cargo.toml
crates/munera_macros/src/: lib.rs
crates/munera_math/: Cargo.toml
crates/munera_math/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
iso/: Cargo.toml
iso/examples/iso-demo/: main.rs
iso/src/: lib.rs
mac/: Cargo.toml
mac/src/: lib.rs
munera/: Cargo.toml
munera/examples/demo/: main.rs
munera/src/: lib.rs
ref_exporter/: Cargo.toml
ref_exporter/assets/: dummy.glb
ref_exporter/src/: main.rs
shd/: egui.frag  egui.vert
src/: assets.rs  editor.rs  engine.rs  iso_renderer.rs  lib.rs  logger.rs  main.rs  math.rs  misc_comps.rs
src/ass/: mod.rs
src/ecs/: mod.rs
src/ed/: mod.rs
src/editor/: inspect.rs  mod.rs
src/eng/: eng_log.rs  mod.rs
src/engine/: eng_log.rs  mod.rs
src/gfx/: egui_integration.rs  mod.rs
src/math/: mod.rs
