[package]
name = "munera"
version = "0.1.0"
edition = "2021"

[lib]
name = "munera"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bytemuck = "1.14.0"
gl = "0.14.0"
fermium = "22605.0.0"
egui = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde-binary = "0.5.0"
hecs = { version = "0.10.3", features = ["row-serialize"] }
mac = { path = "mac" }
egui_extras = { version = "0.23.0", features = ["image", "all_loaders"] }
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg", "bmp"] }
tinyfiledialogs = "3.0"
log = "0.4.20"
shaderc = "0.8.2"
serde_repr = "0.1.16"
spirv-reflect = "0.2.3"