[package]
name = "mac"
version = "0.1.0"
edition = "2021"

[lib]
name = "mac"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["extra-traits"] }
proc-macro2 = "*"
lazy_static = "*"