[package]
name = "munera_assets"
version = "0.1.0"
edition = "2021"

[lib]
name = "munera_assets"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde-binary = "0.5.0"
egui_extras = { version = "0.23.0", features = ["image"] }
spirv-reflect = "0.2.3"
hecs = { version = "0.10.3", features = ["serde", "row-serialize", "macros"] }
log = "0.4.20"
serde_repr = "0.1.16"
egui = "0.23"
wgpu = "0.17.1"
munera_math = { path = "../munera_math/" }
inventory = "0.1.11"
egui_wgpu_backend = "0.26.0"
