[package]
name = "munera_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "munera_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bytemuck = "1.14.0"
egui = "0.23"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde-binary = "0.5.0"
hecs = { version = "0.10.3", features = ["serde", "row-serialize", "macros"] }
munera_macros = { path = "../munera_macros" }
egui_extras = { version = "0.23.0", features = ["image"] }
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg", "bmp"] }
tinyfiledialogs = "3.0"
log = "0.4.20"
shaderc = "0.8.2"
serde_repr = "0.1.16"
spirv-reflect = "0.2.3"
wgpu = "0.17.1"
egui-wgpu = "0.23.0"
winit = "0.28.7"
pollster = "0.3.0"
egui_winit_platform = "0.20.0"
egui_demo_lib = "0.23.0"
egui_wgpu_backend = "0.26.0"
egui_dock = "0.8.2"
memoffset = "0.9"
rtti = "0.4.0"
rtti-derive = "0.4.0"
inventory = "0.1.11"
directories = "5.0.1"
num-traits = "0.2.17"
erased-serde = "0.3.31"
typetag = "0.2.13"
munera_assets = { path = "../munera_assets" }
munera_math = { path = "../munera_math" }
munera_foundation = { path = "../munera_foundation" }

[build-dependencies]
munera_assets = { path = "../munera_assets" }