[package]
name = "munera_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "munera_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "2.0.38", features = ["extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "*"
lazy_static = "*"
log = "0.4.20"
egui = "0.23.0"