[package]
name = "munera_math"
version = "0.1.0"
edition = "2021"

[lib]
name = "munera_math"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bytemuck = "1.14.0"
serde = { version = "1.0.188", features = ["derive"] }
winit = "0.28.7"
num-traits = "0.2.17"
egui = "0.23"
wgpu = "0.17.1"
serde_repr = "0.1.16"
